# stockproject

./: DEPLOYMENT.md  Dockerfile  FACULTY_DEMO_GUIDE.md  FACULTY_DEMO_WITHOUT_FRONTEND.md  FACULTY_PRESENTATION_SUMMARY.md  README.md  SYSTEM_STATUS.md  SYSTEM_SUMMARY.md  VISUALIZATION_README.md  demo.py  demo_visualizations.py  docker-compose.yml  faculty_demo.py  faculty_demo_no_frontend.py  package-lock.json  package.json  project_plan.md  pyproject.toml  quick_demo.py  requirements.txt  setup.py  start_system.py  test_api_demo.py  test_simple.py  test_system.py  tt
Final Report Latex/: Certificate.tex  CourseOutcomes.tex  Cover_page.tex  README.txt  Thumbs.db  abstract.tex  acknowledgement.tex  bibliography.tex  block diagram.tex  certificate_2_guides.tex  conclusion.tex  cover_page_2_guides.tex  introduction.tex  literature_review.tex  main_report.tex  results.tex  technical_description.tex
Mini/: Course outcome.tex  ProjectEvaluationRubrics.tex  abstract.tex  acknowledgement.tex  appendix.tex  bibliography.tex  certificate.tex  conclusion.tex  cover_page.tex  introduction.tex  literature_review.tex  main_report.tex  results.tex  sitlogo.ps  technical_description.tex
data_ingestion/: news_sentiment.py  sentiment.py  stock_fetch.py
data_ingestion/api/: client_example.py  main.py
evaluation/: evaluate_models.py  metrics.py
feature_engineering/: feature.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
modeling/: advanced_analytics.py  prophet_model.py  signals.py  xgboost_model.py
scripts/: scheduler.py
visualization/: plot_forecast.py  tempCodeRunnerFile.py
