[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analysis-system"
version = "1.0.0"
description = "Comprehensive stock analysis and prediction system with sentiment analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Stock Analysis Team", email = "team@stockanalysis.com"}
]
maintainers = [
    {name = "Stock Analysis Team", email = "team@stockanalysis.com"}
]
keywords = ["stock", "prediction", "sentiment", "analysis", "finance", "prophet", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "yfinance>=0.2.0",
    "prophet>=1.1.0",
    "scikit-learn>=1.1.0",
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "pydantic>=1.8.0",
    "requests>=2.25.0",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "pre-commit>=2.15.0",
]
sentiment = [
    "vaderSentiment>=3.3.2",
    "textblob>=0.17.1",
]
deployment = [
    "gunicorn>=20.1.0",
    "docker>=5.0.0",
    "docker-compose>=1.29.0",
]
all = [
    "stock-analysis-system[dev,sentiment,deployment]"
]

[project.urls]
Homepage = "https://github.com/stockanalysis/stock-analysis-system"
Documentation = "https://stockanalysis.readthedocs.io"
Repository = "https://github.com/stockanalysis/stock-analysis-system.git"
"Bug Tracker" = "https://github.com/stockanalysis/stock-analysis-system/issues"

[project.scripts]
stock-forecast = "modeling.prophet_model:main"
stock-evaluate = "evaluation.evaluate_models:main"
stock-api = "api.main:main"
stock-demo = "demo_visualizations:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_ingestion*", "feature_engineering*", "modeling*", "evaluation*", "visualization*", "api*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=data_ingestion",
    "--cov=feature_engineering", 
    "--cov=modeling",
    "--cov=evaluation",
    "--cov=visualization",
    "--cov=api",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["data_ingestion", "feature_engineering", "modeling", "evaluation", "visualization", "api"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

